Added basic herbs support - Noting some herbs - Use bottomless bucket of patches