@@ -1,20 +1,19 @@
 package net.runelite.client.plugins.externals.oneclick.Comparables;
 
-import com.google.common.collect.ImmutableSet;
-import java.util.Set;
 import net.runelite.api.ItemID;
 import net.runelite.api.MenuEntry;
 import net.runelite.api.MenuOpcode;
 import net.runelite.client.plugins.externals.oneclick.OneClickPlugin;
+import java.util.Set;
 
 public class Birdhouses implements ClickComparable
 {
-	private static final Set<Integer> HOPS_SEED = ImmutableSet.of(
+	private static final Set<Integer> HOPS_SEED = Set.of(
 		ItemID.BARLEY_SEED, ItemID.HAMMERSTONE_SEED, ItemID.ASGARNIAN_SEED,
 		ItemID.JUTE_SEED, ItemID.YANILLIAN_SEED, ItemID.KRANDORIAN_SEED, ItemID.WILDBLOOD_SEED
 	);
 
-	private static final Set<String> BIRD_HOUSES_NAMES = ImmutableSet.of(
+	private static final Set<String> BIRD_HOUSES_NAMES = Set.of(
 		"<col=ffff>Bird house (empty)", "<col=ffff>Oak birdhouse (empty)", "<col=ffff>Willow birdhouse (empty)",
 		"<col=ffff>Teak birdhouse (empty)", "<col=ffff>Maple birdhouse (empty)", "<col=ffff>Mahogany birdhouse (empty)",
 		"<col=ffff>Yew birdhouse (empty)", "<col=ffff>Magic birdhouse (empty)", "<col=ffff>Redwood birdhouse (empty)"
@@ -46,6 +45,13 @@ public class Birdhouses implements ClickComparable
 	{
 		return event.getOpcode() == MenuOpcode.ITEM_USE_ON_GAME_OBJECT.getId() &&
 			event.getTarget().contains("<col=ff9040>Hops seed<col=ffffff> -> ");
+	}
+
+	@Override
+	public boolean isClickValid(OneClickPlugin plugin, MenuEntry event)
+	{
+		//Not yet implemented
+		return false;
 	}
 
 	@Override
