@@ -1,6 +1,5 @@
 package net.runelite.client.plugins.externals.oneclick.Comparables;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Set;
 import net.runelite.api.ItemID;
 import net.runelite.api.MenuEntry;
@@ -9,12 +8,12 @@ import net.runelite.client.plugins.externals.oneclick.OneClickPlugin;
 
 public class Darts implements ClickComparable
 {
-	private static final Set<Integer> BOLTS = ImmutableSet.of(
+	private static final Set<Integer> BOLTS = Set.of(
 		ItemID.BRONZE_BOLTS_UNF, ItemID.IRON_BOLTS_UNF, ItemID.STEEL_BOLTS_UNF,
 		ItemID.MITHRIL_BOLTS_UNF, ItemID.ADAMANT_BOLTSUNF, ItemID.RUNITE_BOLTS_UNF,
 		ItemID.DRAGON_BOLTS_UNF, ItemID.UNFINISHED_BROAD_BOLTS
 	);
-	private static final Set<Integer> DART_TIPS = ImmutableSet.of(
+	private static final Set<Integer> DART_TIPS = Set.of(
 		ItemID.BRONZE_DART_TIP, ItemID.IRON_DART_TIP, ItemID.STEEL_DART_TIP,
 		ItemID.MITHRIL_DART_TIP, ItemID.ADAMANT_DART_TIP, ItemID.RUNE_DART_TIP,
 		ItemID.DRAGON_DART_TIP
@@ -44,6 +43,13 @@ public class Darts implements ClickComparable
 	{
 		return event.getOpcode() == MenuOpcode.ITEM_USE.getId() &&
 			event.getTarget().contains("<col=ff9040>Feather<col=ffffff> -> ");
+	}
+
+	@Override
+	public boolean isClickValid(OneClickPlugin plugin, MenuEntry event)
+	{
+		//Not yet implemented
+		return false;
 	}
 
 	@Override
