@@ -1,15 +1,14 @@
 package net.runelite.client.plugins.externals.oneclick.Comparables;
 
-import com.google.common.collect.ImmutableSet;
-import java.util.Set;
 import net.runelite.api.ItemID;
 import net.runelite.api.MenuEntry;
 import net.runelite.api.MenuOpcode;
 import net.runelite.client.plugins.externals.oneclick.OneClickPlugin;
+import java.util.Set;
 
 public class Firemaking implements ClickComparable
 {
-	private static final Set<Integer> LOG_ID = ImmutableSet.of(
+	private static final Set<Integer> LOG_ID = Set.of(
 		ItemID.LOGS, ItemID.OAK_LOGS, ItemID.WILLOW_LOGS, ItemID.TEAK_LOGS,
 		ItemID.MAPLE_LOGS, ItemID.MAHOGANY_LOGS, ItemID.YEW_LOGS, ItemID.MAGIC_LOGS,
 		ItemID.REDWOOD_LOGS
@@ -38,6 +37,13 @@ public class Firemaking implements ClickComparable
 	{
 		return event.getOpcode() == MenuOpcode.ITEM_USE.getId() &&
 			event.getTarget().contains("<col=ff9040>Tinderbox<col=ffffff> -> ");
+	}
+
+	@Override
+	public boolean isClickValid(OneClickPlugin plugin, MenuEntry event)
+	{
+		//Not yet implemented
+		return false;
 	}
 
 	@Override
