@@ -1,18 +1,17 @@
 package net.runelite.client.plugins.externals.oneclick.Comparables;
 
-import com.google.common.collect.ImmutableSet;
-import java.util.Set;
 import net.runelite.api.ItemID;
 import net.runelite.api.MenuEntry;
 import net.runelite.api.MenuOpcode;
 import net.runelite.client.plugins.externals.oneclick.OneClickPlugin;
+import java.util.Set;
 
 public class Seeds implements ClickComparable
 {
-	private static final Set<Integer> SEED_SET = ImmutableSet.of(
+	private static final Set<Integer> SEED_SET = Set.of(
 		ItemID.GOLOVANOVA_SEED, ItemID.BOLOGANO_SEED, ItemID.LOGAVANO_SEED
 	);
-	private static final Set<Integer> WATERING_CANS = ImmutableSet.of(
+	private static final Set<Integer> WATERING_CANS = Set.of(
 		ItemID.WATERING_CAN, ItemID.WATERING_CAN1, ItemID.WATERING_CAN2, ItemID.WATERING_CAN3, ItemID.WATERING_CAN4,
 		ItemID.WATERING_CAN5, ItemID.WATERING_CAN6, ItemID.WATERING_CAN7, ItemID.GRICOLLERS_CAN
 	);
@@ -46,6 +45,13 @@ public class Seeds implements ClickComparable
 				(event.getTarget().contains("<col=ff9040>Seed<col=ffffff> -> ") &&
 					event.getTarget().toLowerCase().contains("tithe"))
 		);
+	}
+
+	@Override
+	public boolean isClickValid(OneClickPlugin plugin, MenuEntry event)
+	{
+		//Not yet implemented
+		return false;
 	}
 
 	@Override
